# gpu

./: .gitignore  00_introduction.ipynb  00_single_fwd_conv.ipynb  02_cudnn_jit_bmm.ipynb  03_cudnn_mlp_training.ipynb  README.md  first.ipynb  first.py  pyproject.toml  tasks.py
cudnn/: 00_introduction.ipynb  00_single_fwd_conv.ipynb  01_batch_mat_mul.ipynb  02_cudnn_jit_bmm.ipynb  README.md  pyproject.toml
onnx/: README.md  linear_regression.onnx  linear_regression.py  neural_network.py  pyproject.toml  sklearn_converter.py
