[project]
name = "gpu"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "nvidia-cudnn-frontend (==1.14.1)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "jupytext (>=1.18.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Use poetry just for dependency management, not for package building
package-mode = false

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "pytorch-cu128"}
