[project]
name = "my_onnx"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "onnx (>=1.20.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "skl2onnx (>=1.19.1,<2.0.0)",
    "onnxruntime (>=1.23.2,<2.0.0)"
]

[tool.poetry]
# Use poetry just for dependency management, not for package building
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
